--- a/_posts/2018-11-11-post1.md
+++ b/_posts/2018-11-11-post1.md
@@ -1,7 +1,19 @@
 ---
 layout: post
-title: "test post"
+title: "Эволюция мобильных девайсов в моих руках: 2001 - nowadays"
 ---
 
-Content hello
-jj
+Захотелось на днях вспомнить обо всех мобильных девайсах, которыми мне приходилось
+пользоваться на протяжении всей жизни. Сейчас мы живем в эру не особо интересную, 
+с точки зрения развития мобильной техники: ну да, добавляются новые камеры, гнущиеся экраны, железо матереет, разрешение экрана едва-ли не 4к... 
+
+Но после появившегося в медиа-пространстве айфона
+
+<h3> Мой первый мобильный девайс </h3>
+
+Было это 
+
+<div> <img src="pics/3410.jpg" class="img-responsive" alt=""> </div>
+
+Надо разобраться как добавлять картинки
+
